Self Introduction Web page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,52 @@
----
-layout: home
-author_profile: true
----
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <title>박현상 - ParkHyunSang</title>
+    <meta name="google-site-verification" content="M4HnA60n-HEGWtFllfjes_bFZyLh5kFqmDBS5tU_Bi4" />
+    <link rel="stylesheet" type="text/css" href="/main.css">
+    <link rel="stylesheet" type="text/css" href="/nav.css">
+</head>
+<style>
+    *{
+        font-family: 'Nanum Gothic', sans-serif;
+    }
+</style>
+<body>
+    <div class="loading-div">
+        <div class="main-info">
+            <img class="main-image" src="/main-image.jpeg">
+            <h1 class="loading-h1">박현상
+            <br/>
+            ParkHyunSang
+            </h1>
+            <h3 class="loading-h3">
+                웹 퍼블리셔 & 웹 프론트엔드 개발자
+            </h3>
+            <p class="info">
+                기획,계획적인 걸 좋아하고 사람들과 소통하는 걸 좋아하는 학생 개발자 입니다.
+                <br>
+                웹 프론트엔드 개발과 더불어 C# WindowsForm, 정보보안 등 많은 분야에 관심이 있습니다.
+                <br>
+                하늘을 좋아하며 비행기를 좋아하는 학생입니다 👨🏻‍💻
+                <br>
+                제가 작업한 작업물을 보고 싶으시다면 <a class="link" href="/work.html">Work</a>로 가 주세요.
+                <br>
+                제 커리어를 보고 싶으시다면 <a class="link" href="/career.html">Career</a>로 가 주세요.
+            </p>
+        </div>
+    </div>
+    <div class="email-div">
+        <a class="email-a" href="mailto:parkhyunsang@kakao.com">
+            <button class="email-button">메일 보내기</button>
+        </a>
+    </div>
+    <div class="sns-image">
+        <a class="sns-a" href="https://www.facebook.com/profile.php?id=100034448592868"><img class="sns-item" src="/image/facebook.png"></a>
+        <a class="sns-a" href="https://www.instagram.com/hyunsang_0625/?hl=ko"><img class="sns-item" src="/image/instagram-sketched.png"></a>
+        <a class="sns-a" href="https://www.youtube.com/channel/UCa6DUDzShfG042wE0LgFn-g?view_as=subscriber"><img class="sns-item" src="/image/youtube.png"></a>
+        <a class="sns-a" href="https://github.com/HyunSang0625"><img class="sns-item" src="/image/github-image.png"></a>
+    </div>
+</body>
+</html>
