[FIX] Plus "클릭"

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <br>
                 하늘을 좋아하며 비행기를 좋아하는 학생입니다 👨🏻‍💻
                 <br>
-                제가 작업한 작업물을 보고 싶으시다면 <a class="link" href="/work.html">Work</a>로 가 주세요.
+                제가 작업한 작업물을 보고 싶으시다면 <a class="link" href="/work.html">Work(클릭)</a>로 가 주세요.
                 <br>
-                제 커리어를 보고 싶으시다면 <a class="link" href="/career.html">Career</a>로 가 주세요.
+                제 커리어를 보고 싶으시다면 <a class="link" href="/career.html">Career(클릭)</a>로 가 주세요.
             </p>
         </div>
     </div>
