--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="loading-div">
         <div class="main-info">
-            <img class="main-image" src="/main-image.jpeg">
+            <img class="main-image" src="/main-image.jpg">
             <h1 class="loading-h1">박현상
             <br/>
             ParkHyunSang
